<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.android.musicalstructure.PlayerActivity">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout1"
            style="@style/menuParent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                style="@style/menuImage"
                android:src="@drawable/folder"
                android:contentDescription="@string/folders"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/folders"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            style="@style/menuParent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                style="@style/menuImage"
                android:src="@drawable/playlist"
                android:contentDescription="@string/playlists"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlists"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/menuParent"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                style="@style/menuImage"
                android:src="@drawable/shopping"
                android:contentDescription="@string/shop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/menu"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="1dp">

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/controlBar"
        android:padding="15dp"
        android:text="@string/descriptionPlayerActivity" />

    <LinearLayout
        android:id="@+id/controlBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <Button
                android:id="@+id/songDetails"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/icon_info"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/songDetails"
                android:layout_toStartOf="@id/songDetails"
                android:fillViewport="true"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textPlaying"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/no_media" />
            </ScrollView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/soundTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/duration"
                android:layout_alignBottom="@+id/duration"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="00:00"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/progress"
                android:layout_toEndOf="@id/progress"
                android:layout_toLeftOf="@+id/duration"
                android:layout_toRightOf="@+id/progress"
                android:layout_toStartOf="@id/duration" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="00:00"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/soundControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/retweet"
                style="@style/controlButton"
                android:layout_alignBaseline="@+id/playPause"
                android:layout_alignBottom="@+id/playPause"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:text="@string/icon_retweet" />

            <Button
                android:id="@+id/random"
                style="@style/controlButton"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/retweet"
                android:layout_toRightOf="@+id/retweet"
                android:text="@string/icon_random" />

            <Button
                android:id="@+id/backward"
                style="@style/controlButton"
                android:layout_alignBaseline="@+id/stop"
                android:layout_alignBottom="@+id/stop"
                android:layout_toLeftOf="@+id/playPause"
                android:layout_toStartOf="@+id/playPause"
                android:text="@string/icon_backward" />

            <Button
                android:id="@+id/playPause"
                style="@style/controlButton"
                android:layout_alignBaseline="@+id/forward"
                android:layout_alignBottom="@+id/forward"
                android:layout_toLeftOf="@+id/forward"
                android:layout_toStartOf="@+id/forward"
                android:text="@string/icon_play" />

            <Button
                android:id="@+id/forward"
                style="@style/controlButton"
                android:layout_alignBaseline="@+id/stop"
                android:layout_alignBottom="@+id/stop"
                android:layout_toLeftOf="@+id/stop"
                android:layout_toStartOf="@+id/stop"
                android:text="@string/icon_forward" />

            <Button
                android:id="@+id/stop"
                style="@style/controlButton"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/icon_stop" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>