<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.android.musicalstructure.PlayListActivity">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout1"
            style="@style/menuParent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                style="@style/menuImage"
                android:src="@drawable/folder"
                android:contentDescription="@string/folders"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/folders"
                android:textAlignment="center" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout4"
            style="@style/menuParent"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                style="@style/menuImage"
                android:src="@drawable/playlist"
                android:contentDescription="@string/playlists"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlists"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/menuParent"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                style="@style/menuImage"
                android:src="@drawable/shopping"
                android:contentDescription="@string/shop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/menu"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="1dp">

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footerBar"
        style="@style/folderListParent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/addplaylist"
            android:contentDescription="@string/addplaylist"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView10"
            android:layout_toRightOf="@+id/imageView10"
            android:padding="7dp"
            android:text="@string/addplaylist" />

    </RelativeLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footerBar"
        android:padding="15dp"
        android:text="@string/destriptionPlayListActivity" />


</RelativeLayout>